--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
     <link rel="stylesheet" type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-    <title>Zoeva</title>
+    <link rel="icon" type="image/png"
+      href="https://zoevacosmetics.com/cdn/shop/files/zoeva-favicon-2_32x32.png?v=1658133923">
+    <title>
+      ZOEVA | Beauty, Makeup & Brushes | Shop now!</title>
   </head>
   <body>
     <div id="root"></div>
